--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -13,6 +13,8 @@
 </head>
 <body>
     <h1>Home</h1>
+        <a href="/prikaz">Prikaz</a>
+        <br>
         <label for="url">URL:</label>
         <input type="text" id="url" name="url"><br><br>
         <button  onclick="poslji()">Pošlji</button>
